syntax = "proto3";

package taskqueue;

option go_package = "/pb/";

service TaskQueue {
  rpc SubmitTask(SubmitTaskRequest) returns (SubmitTaskResponse);
  rpc GetTaskStatus(GetTaskStatusRequest) returns (GetTaskStatusResponse);
  rpc StreamTasksResults(stream StreamTasksResultsRequest)
      returns (stream StreamTaskResultResponse);
}

message SubmitTaskRequest {
  int32 task_id = 1;
  string task_type = 2;
  string task_payload = 3;
}

message SubmitTaskResponse {
  int32 task_id = 1;
  string status = 2;
}

message GetTaskStatusRequest { int32 task_id = 1; }

message GetTaskStatusResponse {
  int32 task_id = 1;
  string status = 2;
  string result = 3;
}

message StreamTasksResultsRequest { int32 task_id = 1; }

message StreamTaskResultResponse {
  int32 task_id = 1;
  string result = 2;
  string status = 3; // Status of the task (e.g., "Completed")
}
